# discord-music-bot

./: .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  README.md  Shuttle.toml  devbox.json  fly.toml  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
dep-install-hack/: Cargo.toml  Shuttle.toml  build.rs
dep-install-hack/src/: main.rs
src/: commands.rs  main.rs  service.rs
src/commands/: common.rs  join.rs  leave.rs  list.rs  pause.rs  play.rs  skip.rs
src/events/: handler.rs  mod.rs  track.rs
src/tools/: mod.rs
src/tools/piped/: mod.rs
