[package]
name = "eh-o-tocas"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["."]
exclude = ["dep-install-hack"]

[dependencies]
shuttle-runtime = "0.18.0"
anyhow = "1.0.71"
shuttle-secrets = "0.18.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1.37"
reqwest = "0.11.18"


symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
lazy_static = "1.4.0"
regex = "1.9.0"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = [
    "cache",
    "chrono",
    "gateway",
    "rustls_backend",
    "standard_framework",
    "voice",
    "collector",
]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["builtin-queue"]
