[package]
name = "eh-o-tocas"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["."]
exclude = ["dep-install-hack"]

[dependencies]
shuttle-runtime = "0.44.0"
anyhow = "1.0.71"
shuttle-secrets = "0.42.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1.37"
reqwest = { version = "0.11.18", features = ["json"] }


lazy_static = "1.1.1"
regex = "1.9.0"
humantime = "2.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = [
    "cache",
    "chrono",
    "gateway",
    "rustls_backend",
    "standard_framework",
    "voice",
    "collector",
]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]
