[package]
name = "eh-o-tocas"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["."]
exclude = ["dep-install-hack"]

[dependencies]
shuttle-runtime = "0.47.0"
anyhow = "1.0.86"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1.40"
reqwest = { version = "0.11.27", features = ["json"] }


lazy_static = "1.5.0"
regex = "1.10.6"
humantime = "2.1.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
poise = "0.6.1"
shuttle-serenity = "0.47.0"

[dependencies.songbird]
version = "=0.4.0"
features = ["builtin-queue"]

[dependencies.serenity]
version = "0.12.2"
default-features = false
features = [
    "cache",
    "chrono",
    "gateway",
    "rustls_backend",
    "standard_framework",
    "voice",
    "collector",
]

[dependencies.symphonia]
version = "0.5.4"
features = ["aac", "mp3", "isomp4", "alac"]
